[tool.poetry]
name = "c2"
version = "0.1.0"
description = "Basic Command and Control MQTT client to publish file cycling and S3 upload triggers"
authors = ["Ari <achadda@iqt.org>", "Rob <rcaudill@iqt.org>", "Logan <lkunka@iqt.org>", "Mona <mgogia@iqt.org>", "Jon <jmeade@iqt.org>", "Mike <mchadwick@iqt.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
